# llvm-fuzz

lab/: main.c  main.s
lab/libxls-1.6.2/: Makefile  auto_compile.sh  config.h  config.status  libtool  libxlsreader.la  test2_libxls  test_libxls  xls2csv
lab/libxls-1.6.2/.libs/: libxlsreader.lai  test2_libxls  test_libxls  xls2csv
lab/libxls-1.6.2/__install/lib/: libxlsreader.la  libxlsreader.so.8.0.2
lab/libxls-1.6.2/__install/lib/pkgconfig/: libxls.pc
lab/libxls-1.6.2/cplusplus/.deps/: main.Tpo
lab/libxls-1.6.2/src/: libxlsreader_la-endian.lo  libxlsreader_la-locale.lo  libxlsreader_la-ole.lo  libxlsreader_la-xls.lo  libxlsreader_la-xlstool.lo  xlstool.c
lab/libxls-1.6.2/src/.deps/: libxlsreader_la-endian.Plo  libxlsreader_la-locale.Plo  libxlsreader_la-ole.Plo  libxlsreader_la-xls.Plo  libxlsreader_la-xlstool.Plo  xls2csv.Po
lab/libxls-1.6.2/test/.deps/: test.Po  test2.Po
lab/task1/: CMakeLists.txt  solve.cpp
lab/task2/: main.c  main.ll  solve.cpp  solve.cpp.bak
lab/task2/test/: main.c  main.ll
lab/task3/: solve.cpp
lab/task4/clangWrapper/: CMakeLists.txt  clangWrapper.cpp  clangWrapper.h
lab/task4/clangWrapper/monitor/: monitor  monitor.cpp  res
lab/task4/clangWrapper/test/: test
lab/task4/instrumentation/: CMakeLists.txt  instrumentation.cpp  shm_def.o.c  tmp
lab/task4/instrumentation/test/: out.ll  out.ll.bak  test  test.ll  tmp
lab/task5/: CMakeLists.txt
lab/task5/include/: Forkserver.h  Fuzzer.h  Header.h  Helper.h  Mutator.h  SHM.h  Target.h
lab/task5/src/: Forkserver.cpp  Helper.cpp  SHM.cpp
lab/task5/test/: ForkserverTest.cpp  HelperTest.cpp
lab/test/: test.xls
learn/firstProg/: Makefile  hello.c
learn/testIR/: CMakeLists.txt  handle.cpp  main.bc  main.c  sum.ll
